Eigen_build_problem_fix.txt
if errors below occured:
/opt/ros/noetic/include/grid_map_core/eigen_plugins/FunctorsPlugin.hpp:4:51: warning: ISO C++ forbids declaration of ‘EIGEN_EMPTY_STRUCT_CTOR’ with no type [-fpermissive]
    4 |   EIGEN_EMPTY_STRUCT_CTOR(scalar_sum_of_finites_op)
      |                                                   ^
/opt/ros/noetic/include/grid_map_core/eigen_plugins/FunctorsPlugin.hpp:4:51: error: expected ‘;’ at end of member declaration
    4 |   EIGEN_EMPTY_STRUCT_CTOR(scalar_sum_of_finites_op)
      |                                                   ^
      |                                                    ;
/opt/ros/noetic/include/grid_map_core/eigen_plugins/FunctorsPlugin.hpp:23:51: warning: ISO C++ forbids declaration of ‘EIGEN_EMPTY_STRUCT_CTOR’ with no type [-fpermissive]
   23 |   EIGEN_EMPTY_STRUCT_CTOR(scalar_min_of_finites_op)
      |                                                   ^
/opt/ros/noetic/include/grid_map_core/eigen_plugins/FunctorsPlugin.hpp:23:51: error: expected ‘;’ at end of member declaration
   23 |   EIGEN_EMPTY_STRUCT_CTOR(scalar_min_of_finites_op)
      |                                                   ^
      |                                                    ;
/opt/ros/noetic/include/grid_map_core/eigen_plugins/FunctorsPlugin.hpp:43:51: warning: ISO C++ forbids declaration of ‘EIGEN_EMPTY_STRUCT_CTOR’ with no type [-fpermissive]
   43 |   EIGEN_EMPTY_STRUCT_CTOR(scalar_max_of_finites_op)
      |                                                   ^
/opt/ros/noetic/include/grid_map_core/eigen_plugins/FunctorsPlugin.hpp:43:51: error: expected ‘;’ at end of member declaration
   43 |   EIGEN_EMPTY_STRUCT_CTOR(scalar_max_of_finites_op)
      |                                                   ^
      |                                                    ;
Solution: EIGEN_EMPTY_STRUCT_CTOR is old macro, you should change it to EIGEN_DEVICE_FUNC EIGEN_STRONG_INLINE scalar_sum_of_finites_op() {}
